// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageList should render correct image items when have data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-test-id="image-item"
      >
        <img
          alt="打造高速網站，從網站指標開始！全方位提升使用者體驗與流量的關鍵"
          data-test-id="image-item-src"
          src="https://bit.ly/4228IT0"
        />
        <p
          data-test-id="image-item-title"
        >
          打造高速網站，從網站指標開始！全方位提升使用者體驗與流量的關鍵
        </p>
      </div>
      <div
        data-test-id="image-item"
      >
        <img
          alt="島波海道。單車跳島之旅"
          data-test-id="image-item-src"
          src="https://bit.ly/4b5nLPO"
        />
        <p
          data-test-id="image-item-title"
        >
          島波海道。單車跳島之旅
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-test-id="image-item"
    >
      <img
        alt="打造高速網站，從網站指標開始！全方位提升使用者體驗與流量的關鍵"
        data-test-id="image-item-src"
        src="https://bit.ly/4228IT0"
      />
      <p
        data-test-id="image-item-title"
      >
        打造高速網站，從網站指標開始！全方位提升使用者體驗與流量的關鍵
      </p>
    </div>
    <div
      data-test-id="image-item"
    >
      <img
        alt="島波海道。單車跳島之旅"
        data-test-id="image-item-src"
        src="https://bit.ly/4b5nLPO"
      />
      <p
        data-test-id="image-item-title"
      >
        島波海道。單車跳島之旅
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ImageList should render no data prompt when no images 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-test-id="no-data-prompt"
      >
        No data to display.
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-test-id="no-data-prompt"
    >
      No data to display.
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
